fixed date overflow issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -69,7 +69,7 @@ form{
 }
 
 .date-param {
-  width: 9.6rem;
+  width: 10rem;
 }
 
 .param-tile {
